// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayCategoriesSelect tests should check all categories when select all button is clicked 1`] = `
<div>
  <div
    class="relative"
  >
    <div
      aria-label="open/close-display-categories-select"
      class="cursor-pointer py-2 px-4 border bg-white dark:bg-gray-800 border-gray-300 rounded-lg text-sm flex items-center justify-between w-full"
    >
      <span
        class="pr-4"
      >
        4
      </span>
      <svg
        class="h-4 w-4 transition-transform duration-200 transform rotate-180"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 9l-7 7-7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <div
      class="absolute z-10 bg-white dark:bg-gray-800 border border-gray-300 mt-1 rounded shadow-md max-h-60 overflow-y-auto"
      data-testid="DisplayCategoriesSelectExpanded"
      style="min-width: 100%; width: auto;"
    >
      <div
        class="cursor-pointer py-2 px-4 border-b border-gray-300"
      >
        <div
          class="text-gray-500 dark:text-gray-300 underline"
        >
          Zaznacz wszystkie
        </div>
      </div>
      <div
        class="cursor-pointer py-2 px-4 border-b border-gray-300"
      >
        <div
          class="text-gray-500 dark:text-gray-300 underline"
        >
          Odznacz wszystkie
        </div>
      </div>
      <div
        class="cursor-pointer flex items-center py-2 px-4 border-b border-gray-300"
      >
        <input
          aria-label="Tytuł-check/uncheck"
          checked=""
          class="mr-2"
          readonly=""
          type="checkbox"
        />
        <span>
          Tytuł
        </span>
      </div>
      <div
        class="cursor-pointer flex items-center py-2 px-4 border-b border-gray-300"
      >
        <input
          aria-label="Tytuł.Podtytuł-check/uncheck"
          checked=""
          class="mr-2"
          readonly=""
          type="checkbox"
        />
        <span>
          Tytuł.Podtytuł
        </span>
      </div>
      <div
        class="cursor-pointer flex items-center py-2 px-4 border-b border-gray-300"
      >
        <input
          aria-label="Artyści-check/uncheck"
          checked=""
          class="mr-2"
          readonly=""
          type="checkbox"
        />
        <span>
          Artyści
        </span>
      </div>
      <div
        class="cursor-pointer flex items-center py-2 px-4 border-b border-gray-300"
      >
        <input
          aria-label="Rok-check/uncheck"
          checked=""
          class="mr-2"
          readonly=""
          type="checkbox"
        />
        <span>
          Rok
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DisplayCategoriesSelect tests should expand select menu when component is clicked 1`] = `
<div>
  <div
    class="relative"
  >
    <div
      aria-label="open/close-display-categories-select"
      class="cursor-pointer py-2 px-4 border bg-white dark:bg-gray-800 border-gray-300 rounded-lg text-sm flex items-center justify-between w-full"
    >
      <span
        class="pr-4"
      >
        3
      </span>
      <svg
        class="h-4 w-4 transition-transform duration-200 transform rotate-180"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 9l-7 7-7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <div
      class="absolute z-10 bg-white dark:bg-gray-800 border border-gray-300 mt-1 rounded shadow-md max-h-60 overflow-y-auto"
      data-testid="DisplayCategoriesSelectExpanded"
      style="min-width: 100%; width: auto;"
    >
      <div
        class="cursor-pointer py-2 px-4 border-b border-gray-300"
      >
        <div
          class="text-gray-500 dark:text-gray-300 underline"
        >
          Zaznacz wszystkie
        </div>
      </div>
      <div
        class="cursor-pointer py-2 px-4 border-b border-gray-300"
      >
        <div
          class="text-gray-500 dark:text-gray-300 underline"
        >
          Odznacz wszystkie
        </div>
      </div>
      <div
        class="cursor-pointer flex items-center py-2 px-4 border-b border-gray-300"
      >
        <input
          aria-label="Tytuł-check/uncheck"
          checked=""
          class="mr-2"
          readonly=""
          type="checkbox"
        />
        <span>
          Tytuł
        </span>
      </div>
      <div
        class="cursor-pointer flex items-center py-2 px-4 border-b border-gray-300"
      >
        <input
          aria-label="Tytuł.Podtytuł-check/uncheck"
          checked=""
          class="mr-2"
          readonly=""
          type="checkbox"
        />
        <span>
          Tytuł.Podtytuł
        </span>
      </div>
      <div
        class="cursor-pointer flex items-center py-2 px-4 border-b border-gray-300"
      >
        <input
          aria-label="Artyści-check/uncheck"
          checked=""
          class="mr-2"
          readonly=""
          type="checkbox"
        />
        <span>
          Artyści
        </span>
      </div>
      <div
        class="cursor-pointer flex items-center py-2 px-4 border-b border-gray-300"
      >
        <input
          aria-label="Rok-check/uncheck"
          class="mr-2"
          readonly=""
          type="checkbox"
        />
        <span>
          Rok
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DisplayCategoriesSelect tests should hide select menu when user clicks outside of component 1`] = `
<div>
  <div
    class="relative"
  >
    <div
      aria-label="open/close-display-categories-select"
      class="cursor-pointer py-2 px-4 border bg-white dark:bg-gray-800 border-gray-300 rounded-lg text-sm flex items-center justify-between w-full"
    >
      <span
        class="pr-4"
      >
        3
      </span>
      <svg
        class="h-4 w-4 transition-transform duration-200 "
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 9l-7 7-7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`DisplayCategoriesSelect tests should render initial state 1`] = `
<div>
  <div
    class="relative"
  >
    <div
      aria-label="open/close-display-categories-select"
      class="cursor-pointer py-2 px-4 border bg-white dark:bg-gray-800 border-gray-300 rounded-lg text-sm flex items-center justify-between w-full"
    >
      <span
        class="pr-4"
      >
        3
      </span>
      <svg
        class="h-4 w-4 transition-transform duration-200 "
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 9l-7 7-7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`DisplayCategoriesSelect tests should uncheck all categories except first when deselect all button is clicked 1`] = `
<div>
  <div
    class="relative"
  >
    <div
      aria-label="open/close-display-categories-select"
      class="cursor-pointer py-2 px-4 border bg-white dark:bg-gray-800 border-gray-300 rounded-lg text-sm flex items-center justify-between w-full"
    >
      <span
        class="pr-4"
      >
        1
      </span>
      <svg
        class="h-4 w-4 transition-transform duration-200 transform rotate-180"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 9l-7 7-7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <div
      class="absolute z-10 bg-white dark:bg-gray-800 border border-gray-300 mt-1 rounded shadow-md max-h-60 overflow-y-auto"
      data-testid="DisplayCategoriesSelectExpanded"
      style="min-width: 100%; width: auto;"
    >
      <div
        class="cursor-pointer py-2 px-4 border-b border-gray-300"
      >
        <div
          class="text-gray-500 dark:text-gray-300 underline"
        >
          Zaznacz wszystkie
        </div>
      </div>
      <div
        class="cursor-pointer py-2 px-4 border-b border-gray-300"
      >
        <div
          class="text-gray-500 dark:text-gray-300 underline"
        >
          Odznacz wszystkie
        </div>
      </div>
      <div
        class="cursor-pointer flex items-center py-2 px-4 border-b border-gray-300"
      >
        <input
          aria-label="Tytuł-check/uncheck"
          checked=""
          class="mr-2"
          readonly=""
          type="checkbox"
        />
        <span>
          Tytuł
        </span>
      </div>
      <div
        class="cursor-pointer flex items-center py-2 px-4 border-b border-gray-300"
      >
        <input
          aria-label="Tytuł.Podtytuł-check/uncheck"
          class="mr-2"
          readonly=""
          type="checkbox"
        />
        <span>
          Tytuł.Podtytuł
        </span>
      </div>
      <div
        class="cursor-pointer flex items-center py-2 px-4 border-b border-gray-300"
      >
        <input
          aria-label="Artyści-check/uncheck"
          class="mr-2"
          readonly=""
          type="checkbox"
        />
        <span>
          Artyści
        </span>
      </div>
      <div
        class="cursor-pointer flex items-center py-2 px-4 border-b border-gray-300"
      >
        <input
          aria-label="Rok-check/uncheck"
          class="mr-2"
          readonly=""
          type="checkbox"
        />
        <span>
          Rok
        </span>
      </div>
    </div>
  </div>
</div>
`;
